--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head><title>MonoCHRONOS</title></head>
+  <head><title>MonoCHRONOS</title>
   <style>
     body {
       background-image: src("background.png");
@@ -18,6 +18,7 @@
       animation: spinny0 5s infinite
     }
   </style>
+  </head>
   <body>
     <div style="width:100%; height:100%; padding:auto;>
       <p id="spinny">absolutely nothing</p>
