--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head><title>MonoCHRONOS</title>
   <style>
     body {
-      background-image: src("background.png");
+      background-image: url("background.png");
       background-repeat: repeat;
       background-size: 2rem;
       color:white;
