--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <style>
     body {
       background-image: url("background.png");
-      background-repeat: repeat;
-      background-size: 2rem;
       color:white;
     }
 
     @keyframes spinny0 {
       from {transform: rotate(0deg)}
       to {transform: rotate(180deg)}
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     
     #spinny {
