--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       to {transform: rotate(180deg)}
     }
 
-    div {
+    #dive {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -24,7 +24,7 @@
   </style>
   </head>
   <body>
-    <div style="width:100%; height:100%; padding:auto;>
+    <div id="dive" style="width:100%; height:100%; padding:auto;">
       <p id="spinny">absolutely nothing</p>
     </div>
   </body>
