--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
   </head>
   <body>
-    <div id="dive" style="width:100%; height:100%; padding:auto;">
+    <div id="dive" style="width:100%; height:100%;">
       <p id="spinny">absolutely nothing</p>
     </div>
   </body>
