--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head><title>MonoCHRONOS</title>
-  <style>
-    body {
-      background-image: url("background.png");
-      color:white;
-    }
+  <head>
+    <title>MonoCHRONOS</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
 
-    @keyframes spinny0 {
-      from {transform: rotate(180deg)}
-      to {transform: rotate(360deg)}
-    }
+      body {
+        background-image: url("background.png");
+        background-color: black; /* fallback */
+        color: white;
+      }
 
-    #dive {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    #spinny {
-      animation: spinny0 5s infinite
-    }
-  </style>
+      @keyframes spinny0 {
+        from { transform: rotate(180deg); }
+        to { transform: rotate(360deg); }
+      }
+
+      #dive {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      }
+
+      #spinny {
+        animation: spinny0 5s linear infinite;
+      }
+    </style>
   </head>
   <body>
-    <div id="dive" style="width:100%; height:100%;">
+    <div id="dive">
       <p id="spinny">absolutely nothing</p>
     </div>
   </body>
