--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       html, body {
         height: 100%;
-        margin: 0;
+        margin-top: 20%;
       }
 
       body {
@@ -15,7 +15,7 @@
       }
 
       @keyframes spinny0 {
-        from { transform: rotate(180deg); }
+        from { transform: rotate(0deg); }
         to { transform: rotate(360deg); }
       }
 
@@ -27,7 +27,7 @@
       }
 
       #spinny {
-        animation: spinny0 5s linear infinite;
+        animation: spinny0 2s linear infinite;
       }
     </style>
   </head>
