--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         background-size:5rem;
         background-color: black; /* fallback */
         color: white;
-        font-family: Ubuntu, sans-serif
+        font-family: Ubuntu, sans-serif;
+        font-size: 5rem;
       }
 
       @keyframes spinny0 {
@@ -32,7 +33,6 @@
 
       #spinny {
         animation: spinny0 1s linear infinite;
-        font-size: 5rem;
       }
     </style>
   </head>
