--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
       
       html, body {
-        height: 100%;
+        position: absolute;
+        top:5rem;
       }
 
       body {
