--- a/index.html
+++ b/index.html
@@ -2,39 +2,7 @@
 <html>
   <head>
     <title>MonoCHRONOS</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-      
-      html, body {
-        position: absolute;
-        top:5rem;
-      }
-
-      body {
-        background-image: url("background.png");
-        background-size:5rem;
-        background-color: black; /* fallback */
-        color: white;
-        font-family: Ubuntu, sans-serif;
-        font-size: 5rem;
-      }
-
-      @keyframes spinny0 {
-        from { transform: rotate(0deg); }
-        to { transform: rotate(360deg); }
-      }
-
-      #dive {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-      }
-
-      #spinny {
-        animation: spinny0 1s linear infinite;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="dive">
