--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="dive">
-      <p id="spinny">absolutely nothing</p>
-    </div>
+    <p>fortnite</p>
   </body>
 </html>
