--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>MonoCHRONOS</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body id="body">
     <p>fortnite</p>
   </body>
 </html>
