--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>MonoCHRONOS</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body id="body">
+  <body>
+    <div id="body"></div>
     <p>fortnite</p>
   </body>
 </html>
