--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
   <head>
     <title>MonoCHRONOS</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>fortnite</p>
+    <div id="flex">
+      <div style="display:block; margin: auto; height: 100px;">
+        <div style="position: relative; bottom:450px;">
+          <img id="icon" src="mono-icon.svg" width="600px" height="600px"/>
+        </div>
+      </div>
+      <h1>MonoCHRON<img src="mono-icon.svg" id="header-icon" alt="O"/>S</h1>
+      <div id="flex2">
+        <p>COMING SOON</p>
+      </div>
+    </div>
   </body>
 </html>
