--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   </head>
   <body>
     <div id="flex">
-      <div style="display:block; margin: auto; height: 100px;">
-        <div style="position: relative; bottom:450px;">
-          <img id="icon" src="mono-icon.svg" width="600px" height="600px"/>
+      <div style="display:block; height: 100px;">
+        <div style="position: relative; bottom:450px; display: flex;justify-content: center;align-items: center;">
+          <img id="icon" src="mono-icon.svg"/>
         </div>
       </div>
       <h1>MonoCHRON<img src="mono-icon.svg" id="header-icon" alt="O"/>S</h1>
-      <div id="flex2">
-        <p>COMING SOON</p>
-      </div>
     </div>
   </body>
 </html>
