--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="flex">
+    <div id="flex1">
       <div style="display:block; height: 100px;">
         <div style="position: relative; bottom:450px; display: flex;justify-content: center;align-items: center;">
-          <img id="icon" src="mono-icon.svg"/>
+          <img id="icon" src="media/mono-icon.svg"/>
         </div>
       </div>
-      <h1>MonoCHRON<img src="mono-icon.svg" id="header-icon" alt="O"/>S</h1>
+      <h1>MonoCHRON<img src="media/mono-icon.svg" id="header-icon" alt="O"/>S</h1>
+      <div id="flex2">
+        <div>
+          <a href="https://youtube.com/@monoc-0">
+            <img id="size-2" src="media/links/yt_icon_white_digital.svg" alt="YOUTUBE "/>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.roblox.com/users/856480369/profile">
+            <img src="media/links/Roblox_Tilt_White.svg" alt="ROBLOX "/>
+          </a>
+        </div>
+        <div>
+          <a href="https://github.com/monoc0">
+            <img src="media/links/github-mark-white.svg" alt="GITHUB "/>
+          </a>
+        </div>
+        <div>
+          <a href="/index.html">
+            <img src="media/links/plus-circle-svgrepo-com.svg" alt="MORE "/>
+          </a>
+        </div>
+      </div>
+      <p>A small website dedicated for my GitHub Pages. You can find me with the links above!</p>
     </div>
   </body>
 </html>
